kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started-service
spec:
  type: LoadBalancer
  selector:
    app: getting-started
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
